<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout02"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/topsection"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/settings_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:onClick="goToSettings" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/setting" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:onClick="backTo" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/back"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/minlogo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/minilogo" />

</RelativeLayout>